--- a/Android/app/src/main/res/layout/activity_congrats_message.xml
+++ b/Android/app/src/main/res/layout/activity_congrats_message.xml
@@ -58,6 +58,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.666"
-        app:srcCompat="@drawable/Pepper1" />
+        app:srcCompat="@drawable/pepper1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
